testdata/invalid/invalid_enum_unparseable.bop
enum a : int16 {
    AB = 77777777;
}